--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,500&display=swap');
 * {
     margin:0;
     padding:0;
@@ -10,6 +11,8 @@
 
 body {
     display: flex;
+    background-color: rgba(230, 210, 191, 0.925);
+    font-family:'Times New Roman', Times, serif;
 }
 
 .sidebar {
@@ -27,8 +30,9 @@ body {
 
 .logo {
     width: 35vw;
-    font-size: 7vw;
+    font-size: 4vw;
     color:rgb(245, 181, 129);
+    font-family: 'Cormorant Garamond', serif;
 }
 
 .logo-bar {
@@ -39,9 +43,13 @@ body {
 .intro {
     height: 30vh;
     width: 100%;
-    background-color: gray;
     font-size:2.5rem;
-    padding: 3rem;
+    padding: 5rem;
+}
+
+.mid-section {
+    background-color: antiquewhite;
+    box-shadow:  0 7px 30px -10px rgba(32, 32, 32, 0.5);
 }
 
 label, input {
@@ -52,7 +60,7 @@ input {
     border-radius:.4rem;
 }
 .form-intro {
-    padding: 2rem 5rem;
+    padding: 2rem 5rem .1rem 5rem;
     font-size:3rem;
 }
 
@@ -76,10 +84,35 @@ input {
     width:25vw;
 }
 
-/* .left-side {
-    background-color: brown;
+.bot-section {
+    padding:4.5rem 5rem;
 }
 
-.right-side {
-    background-color: blue;
-} */
+button {
+    cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.login {
+    margin-top: 2rem;
+    font-size: 2rem;
+}
+
+#submit {
+    padding:.5em;
+    font-size:2em;
+    font-weight: 600;
+    width:25rem;
+    background-color:rgba(145, 94, 32, 0.705);
+    color:white;
+    border-radius:1.2rem;
+    border:.1rem solid transparent;
+}
+
+#log-in {
+    background-color: transparent;
+    border:none;
+    font-size:2rem;
+    color:rgba(145, 94, 32, 0.705);
+    font-weight: 600;
+}
